# Math-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  __init__.py  config.py  config.toml  dev.txt  main.py  mathRag.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/scripts/: ai_review.py
.github/workflows/: auto-ready-for-review.yml  docs.yml  ruff.yml
answerGeneration/: __init__.py  apiInference.py  generatorFactory.py  localInference.py  promptTemplates.py  qwenInference.py  ragPipeline.py  webui.py
data/evaluation/: .gitkeep  README.md  golden_set.jsonl  queries.jsonl  queries_full.jsonl
dataGen/: README.md  clean_failed_ocr.py  data_gen.py  extract_terms_from_ocr.py  filter_terms.py  pix2text_ocr.py
dataGen/pipeline/: __init__.py  common.py  json_gen.py  ocr.py  run.py  term_extract.py
dataGen/scripts/: run_loop.bat  run_loop.sh  run_ocr_loop.bat  run_ocr_loop.sh
dataStat/: README.md  __init__.py  chunkStatistics.py  loaders.py  stats_builder.py  visualization.py
docs/: README.md  index.md  package.json  plan.md  project.md  task.md  thesis_defense_diagrams.md
docs/.vitepress/: config.mts
docs/api/: __init__.md  config.md  index.md  mathRag.md
docs/core/: overview.md
docs/guide/: configuration.md  installation.md  introduction.md  usage.md  workflow.md
docs/reference/: migration.md
docs/reports/: defenseFigures.md  overview.md
docs/research/: overview.md
docs/tests/: overview.md  testLoadFile.md  testOutputDirectoryPolicy.md
evaluation/: README.md  __init__.py  evalGeneration.py  evalRetrieval.py  generateQueries.py  quickEval.py  quickEvalOptimized.py
evaluation/common/: __init__.py
evaluation/generation_eval/: __init__.py  cli.py  evaluator.py  ioOps.py  metrics.py  reporting.py  runner.py
evaluation/quick_eval/: __init__.py  cli.py  constants.py  dataOps.py  evaluator.py  methodRunner.py  retrievers.py  runner.py
evaluation/retrieval_eval/: __init__.py  cli.py  evaluator.py  ioOps.py  retrievers.py  runner.py
evaluationData/: __init__.py  generateQueries.py
evaluationData/queryGeneration/: ioOps.py  runner.py
generation/: README.md  __init__.py  generateQueries.py  promptTemplates.py  qwenInference.py  ragPipeline.py  webui.py
generation/query_generation/: __init__.py  cli.py  generator.py  ioOps.py  runner.py
modelEvaluation/: __init__.py  evalGeneration.py
modelEvaluation/common/: ioUtils.py  paths.py
modelEvaluation/generationEval/: cli.py  ioOps.py  (+3 more)
reports_generation/: __init__.py
retrieval/: README.md  README_IMPROVEMENTS.md  __init__.py  buildCorpus.py  config.py  queryRewrite.py  retrievalAdvanced.py  retrievalBM25.py  retrievalBM25Plus.py  retrievalHybrid.py  retrievalHybridPlus.py  retrievalVector.py  retrievalWithReranker.py  retrievers.py
scripts/: README.md  __init__.py  _quickRetrievalTest.py  addMissingTerms.py  analyzeDiagnosis.py  buildEvalTermMapping.py  buildGoldenSet.py  buildTermMapping.py  build_eval_term_mapping.py  checkCorpus.py  data_gen.py  diagnoseFull.py  diagnoseFullAll.py  diagnoseRecall.py  evalGenerationComparison.py  experimentWebUI.py  extract_terms_from_ocr.py  generateDefenseFigures.py  generateReport.py  ocr_to_json_all.py  pix2text_ocr.py  runExperiments.py  runRag.py  significanceTest.py  testDirectLookup.py
src/: __init__.py  config.py  mathRag.py
tests/: README.md  conftest.py  testDataStat.py  testLoadFile.py  testOutputDirectoryPolicy.py  testRetrievalWeights.py  test_workflow.py
utils/: __init__.py  fileLoader.py  outputManager.py  output_file.py
webui/: __init__.py
(+437 files in other folders)
