[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-rag"
version = "0.1.0"
description = "Math-RAG unified CLI and pipeline"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
math-rag = "mathRag:main"

[project.optional-dependencies]
quickeval = []
visualization = [
	"matplotlib>=3.8",
	"seaborn>=0.13",
]

[tool.setuptools]
# config.py 和 mathRag.py 现在也在 src/ 下
py-modules = ["config", "mathRag"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
	"answerGeneration*",
	"dataGen*",
	"dataStat*",
	"modelEvaluation*",
	"evaluationData*",
	"retrieval*",
	"runners*",
	"utils*",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"