[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-rag"
version = "0.1.0"
description = "Math-RAG unified CLI and pipeline"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
math-rag = "core.mathRag:main"

[project.optional-dependencies]
visualization = [
	"matplotlib>=3.8",
	"seaborn>=0.13",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
	"core*",
	"api*",
	"reports_generation*",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"