[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-rag"
version = "0.1.0"
description = "Math-RAG unified CLI and pipeline"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
math-rag = "core.mathRag:main"
math-rag-research = "research.researchMain:main"

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
]
visualization = [
	"matplotlib>=3.8",
	"seaborn>=0.13",
]
research = [
	"matplotlib>=3.8",
	"seaborn>=0.13",
	"scipy>=1.11",
	"rouge-score>=0.1",
	"nltk>=3.8",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
	"core*",
	"research*",
	"reports_generation*",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
	"slow: 耗时或依赖外部大数据",
	"e2e: 全链路或真实模型",
	"raw_pipeline: 从 raw 起步的集成流水线",
]
filterwarnings = [
	"ignore:builtin type SwigPyPacked has no __module__:DeprecationWarning",
	"ignore:builtin type SwigPyObject has no __module__:DeprecationWarning",
	"ignore:builtin type swigvarlink has no __module__:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
